fix: font flicker

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,17 @@
 @import 'tailwindcss';
 
+@font-face {
+  font-family: 'Times Adjusted';
+  src: local('Times New Roman'), local('Times');
+  size-adjust: 105%;
+  ascent-override: 95%;
+  descent-override: 25%;
+  line-gap-override: 0%;
+}
+
 @theme {
-  --font-sitx: 'STIX Two Text', serif;
+  --font-sitx:
+    'STIX Two Text', 'Times Adjusted', 'Times New Roman', Times, serif;
 }
 
 @layer utilities {
